Adjust the code path